--- a/HW_5/App.config
+++ b/HW_5/App.config
@@ -3,4 +3,8 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+	<connectionStrings>
+		<add name="DefaultConnection" connectionString="Data Source=.\sqlexpress;Initial Catalog=my_DB2;Trusted_Connection=True;multipleactiveresultsets=True;TrustServerCertificate=True"
+			providerName="System.Data.SqlClient"/>
+	</connectionStrings>
 </configuration>
